# rs-text-exercises

./: Cargo.toml  README.md
src/: caesar.rs  check_palindrome.rs  count_vowels.rs  fizz_buzz.rs  pig_latin.rs  reverse.rs  word_counter.rs
text-files/: encoded.txt
