[package]
name = "exercise"
version = "0.1.0"
authors = ["Siddharth Borderwala <siddharthborderwala@gmail.com>"]
edition = "2018"

[lib]
name = "exercise"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "fizz_buzz"
path = "src/fizz_buzz.rs"

[[bin]]
name = "reverse"
path = "src/reverse.rs"

[[bin]]
name = "pig_latin"
path = "src/pig_latin.rs"

[[bin]]
name = "count_vowels"
path = "src/count_vowels.rs"

[[bin]]
name = "check_palindrome"
path = "src/check_palindrome.rs"

[[bin]]
name = "word_counter"
path = "src/word_counter.rs"

[[bin]]
name = "caesar"
path = "src/caesar.rs"

[dependencies]
